# blackboard

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  cert.der
app/black_board_mobile/: README.md  analysis_options.yaml  pubspec.yaml
app/black_board_mobile/android/app/: build.gradle.kts
app/black_board_mobile/android/app/src/main/: AndroidManifest.xml
app/black_board_mobile/android/app/src/main/kotlin/com/example/black_board_mobile/: MainActivity.kt
app/black_board_mobile/ios/Runner/: Info.plist
app/black_board_mobile/ios/Runner.xcodeproj/: project.pbxproj
app/black_board_mobile/lib/: main.dart
app/black_board_mobile/lib/src/rust/: api.dart  bridge_models.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/black_board_mobile/lib/src/services/: audio_service.dart
app/black_board_mobile/linux/: CMakeLists.txt
app/black_board_mobile/linux/flutter/: generated_plugins.cmake
app/black_board_mobile/linux/runner/: my_application.cc
app/black_board_mobile/macos/Runner.xcodeproj/: project.pbxproj
app/black_board_mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/black_board_mobile/macos/Runner/Configs/: AppInfo.xcconfig
app/black_board_mobile/protos/: communication.proto
app/black_board_mobile/rust/: Cargo.toml  build.rs
app/black_board_mobile/rust/src/: api.rs  bridge_models.rs  client.rs  frb_generated.rs  lib.rs
app/black_board_mobile/rust/src/client_logic/: mod.rs
app/black_board_mobile/rust/src/proto/: communication.proto
app/black_board_mobile/rust_builder/: pubspec.yaml
app/black_board_mobile/rust_builder/android/: build.gradle  settings.gradle
app/black_board_mobile/rust_builder/android/src/main/: AndroidManifest.xml
app/black_board_mobile/rust_builder/ios/: rust_lib_black_board_mobile.podspec
app/black_board_mobile/rust_builder/linux/: CMakeLists.txt
app/black_board_mobile/rust_builder/macos/: rust_lib_black_board_mobile.podspec
app/black_board_mobile/rust_builder/windows/: CMakeLists.txt
app/black_board_mobile/web/: index.html  manifest.json
app/black_board_mobile/windows/: CMakeLists.txt
app/black_board_mobile/windows/flutter/: generated_plugins.cmake
app/black_board_mobile/windows/runner/: Runner.rc  main.cpp
src/: bridge_models.rs  lib.rs  logger.rs  main.rs  state.rs
src/proto/: communication.proto  communication.rs
tests/: integration_test.rs
