[package]
name = "black_board_back"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
prost = "0.14.1"
quinn = "0.11.8"
rcgen = "0.14.2"
rustls = "0.23.29"
rustls-pki-types = "1.12.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.14.1"
